tests/checker/bad/bad_adt_1.scilla
scilla_version 0

(***************************************************)
(*               Associated library                *)
(***************************************************)
library WalletLib

type TestType =
| Item1 of Int32
| Item2

type TestType =
| Item3 of Int32
| Item4

contract BadLib ()
